--- a/talks/_metadata.yml
+++ b/talks/_metadata.yml
@@ -8,21 +8,6 @@ execute:
 
 citation: true
 
-comments:
-    giscus:
-      repo: jadeynryan/jadey-website-giscus
-      repo-id: R_kgDOKisUNQ
-      category: Announcements
-      category-id: DIC_kwDOKisUNc4CaSRD
-      mapping: pathname
-      reactions-enabled: true
-      loading: lazy
-      input-position: top
-      theme: light
-      language: en
-
 # html format options
-format:
-  html:
-    include-after-body:
-      - ../assets/html/kofi.html
+format: html
+
