--- a/blog/_metadata.yml
+++ b/blog/_metadata.yml
@@ -4,7 +4,7 @@
 freeze: true
 
 # default author and citation
-author: Jadey Ryan
+author: Luong Nguyen Thanh
 citation: true
 
 # align figures to left
