--- a/_quarto.yml
+++ b/_quarto.yml
@@ -70,6 +70,7 @@ website:
 format:
   html:
     theme: [flatly, assets/styling/theme.scss]
+    css: styles.css
     toc: true
     toc-depth: 4
     pagetitle: "Luong Nguyen Thanh | {{< meta title >}}"
